name:              carnival
version:           0.0.0
license:           MIT
license-file:      LICENSE
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Model.Comment
                     Model.Subscription
                     Model.User
                     Model.UserComment
                     Model.Site
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     SendMail
                     Notification
                     Helper.Auth
                     Helper.Request
                     Helper.Validation
                     Handler.Root
                     Handler.Comments
                     Handler.Init
                     Handler.Embed
                     Handler.User
                     Handler.Feed
                     Handler.Unsubscribe
                     Handler.Sites
                     Network.Mail.SendGrid
                     Network.Mail.RecipientOverride

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                FlexibleInstances
                StandaloneDeriving
                ViewPatterns
                RankNTypes

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-postgresql         >= 2.0        && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , yesod-auth-oauth2             >= 0.0.4
                 , http-types
                 , wai
                 , blaze-markup
                 , gravatar
                 , heroku-persistent             >= 0.1.0      && < 0.2
                 , clientsession                 >= 0.9.1
                 , time
                 , yesod-newsfeed                >= 1.2.1
                 , containers
                 , blaze-html
                 , xml-conduit
                 , load-env                      >= 0.0.4
                 , markdown
                 , yesod-text-markdown
                 , transformers
                 , mtl
                 , smtp-mail                     >= 0.1.4.5 && < 0.2
                 , network
                 , mime-mail
                 , random

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         carnival
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , carnival
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    build-depends: base
                 , carnival
                 , yesod-test >= 1.4 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec >= 2.0.0
                 , text
                 , bytestring
                 , shakespeare-text
                 , containers
                 , case-insensitive
                 , aeson
                 , HUnit
                 , yesod-auth
                 , time
                 , markdown
                 , html-conduit < 1.1.1
                 , mime-mail
                 , mtl
                 , shakespeare
                 , wai-extra
