name:              carnival
version:           0.0.0
license:           MIT
license-file:      LICENSE
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Model.Comment
                     Model.Subscription
                     Model.User
                     Model.UserComment
                     Model.Site
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Root
                     Handler.Comments
                     Handler.Init
                     Handler.Embed
                     Handler.User
                     Handler.Feed
                     Handler.Unsubscribe
                     Handler.Sites
                     Handler.Docs
                     Handler.Purchase
                     Handler.Plan
                     Handler.Cancel
                     Helper.Request
                     Helper.Validation
                     SendMail
                     Stripe
                     Stripe.Instances
                     Notification
                     Language
                     Network.Mail.SendGrid
                     Network.Mail.RecipientOverride

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

                FlexibleInstances
                RankNTypes
                StandaloneDeriving

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-postgresql         >= 2.1.1      && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.4
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

                 , SHA                           >= 1.6.4      && < 1.7
                 , blaze-html
                 , blaze-markup
                 , esqueleto                     >= 2.1.2.2    && < 2.2
                 , gravatar
                 , heroku-persistent             >= 0.1.0      && < 0.2
                 , http-types
                 , load-env                      >= 0.0.4
                 , markdown
                 , mime-mail
                 , mtl
                 , network
                 , path-pieces
                 , random
                 , smtp-mail                     >= 0.1.4.5 && < 0.2
                 , stripe-haskell                >= 0.1.3   && < 0.2
                 , transformers
                 , wai
                 , xml-conduit
                 , yesod-auth-oauth2             >= 0.0.4
                 , yesod-newsfeed                >= 1.2.1
                 , yesod-text-markdown

executable         carnival
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, carnival

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

                FlexibleInstances
                RankNTypes
                StandaloneDeriving

    build-depends: base
                 , carnival
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod

                 , aeson
                 , bytestring
                 , case-insensitive
                 , containers
                 , hspec-expectations-lifted
                 , http-types
                 , markdown
                 , mime-mail
                 , mtl
                 , shakespeare
                 , shakespeare-text
                 , stripe-haskell
                 , text
                 , time
                 , wai-extra
                 , yesod-auth
